# cointracker-v2

./: .coverage  .gitignore  README.md  environment.yml  requirements.txt  requirements_dev.txt  setup.cfg  tox.ini
backup/: pyproject.toml  requirements.txt  setup.cfg  tox.ini
src/cointracker/: app.py  main.py
src/cointracker/data/: CoinGeckoIDs.json  fiat_registry.yaml  registry.yaml  token_registry.yaml
src/cointracker/objects/: asset.py  enumerated_values.py  exceptions.py  orderbook.py  pool.py
src/cointracker/pricing/: coinbase_api.py  getAssetPrice.py  getCoinGeckoPrice.py  getYahooPrice.py
src/cointracker/process/: conversions.py  execute.py  transact.py  wash.py
src/cointracker/settings/: config.py  config.yaml
src/cointracker/util/: __init__.py  build.py  dialogue.py  export.py  file_io.py  parsing.py  util.py
tests/: chain_wash.xlsx  conftest.py  mixed_orders.xlsx  no_double_wash.csv  no_double_wash.xlsx  same_day_wash.csv  same_day_wash.xlsx  simple_orders.csv  simple_orders.xlsx  simple_wash.xlsx  test_chain_wash_orderbook.py  test_mixed_orderbook.py  test_no_double_wash_orderbook.py  test_orderbook.py  test_same_day_wash_orderbook.py  test_simple_orderbook.py  test_simple_wash_orderbook.py  wash_from_asset_purchase.xlsx
