[metadata]
name = cointracker
description = Processes cryptocurrency transactions for tax purposes
author = Nathanael Mayo
licence = MIT
platforms = unix, linux, osx, cygwin, win32
classifiers = 
    Programming Language :: Python :: 3.9
    Programming Language :: Python :: 3.10
    Programming Language :: Python :: 3.11

[options]
packages =
    cointracker
install_requires = 
    numpy>=1.20
    pandas>=1.2
    pyyaml>=6.0
    requests>=2
python_requires = >=3.9
package_dir =
    =src
zip_safe = no

[options.extras_require]
testing =
    pytest>=6.0
    pytest-cov>=2.0
    mypy>=0.812
    pylint>=2.15
    tox>=3.8

[options.package_data]
cointracker = py.typed

[pylint]
max-line-length = 160

[tool:pytest]
minversion = 6.0
addopts = --cov=cointracker
testpaths =
    tests
